cmake_minimum_required(VERSION 3.8)
project(qrb_colorspace_convert_lib VERSION 0.1.0)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake_auto REQUIRED)
ament_auto_find_build_dependencies()

# backend option
option(USE_OPENCV_BACKEND "Use OpenCV backend" OFF)

if(USE_OPENCV_BACKEND)
  find_package(OpenCV REQUIRED core imgproc highgui)
  ament_auto_add_library(${PROJECT_NAME} SHARED
    src/colorspace_convert.cpp
  )
  target_compile_definitions(${PROJECT_NAME} PRIVATE USE_OPENCV_BACKEND)
  target_include_directories(${PROJECT_NAME} PRIVATE ${OpenCV_INCLUDE_DIRS})
  target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
else()
  ament_auto_add_library(${PROJECT_NAME} SHARED
    src/opengles_common.cpp
    src/colorspace_convert.cpp
  )

  target_link_libraries(${PROJECT_NAME}
    EGL
    GLESv2
  )
endif()

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 1)

ament_auto_package()