<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_colorspace_convert_lib</name>
  <version>0.1.0</version>
  <description>Convert the color space of image between nv12 and rgb8</description>
  <maintainer email="wantao@qti.qualcomm.com">Vito Wang</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>qcom-adreno-dev</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>lib_mem_dmabuf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
